# tile-map-parallel-builder

./: .gitignore  LICENSE  README.md  model.drawio
tile_map_parallel/: ClassDiagram.cd  main.cpp  tile_map_parallel.sln  tile_map_parallel.vcxproj  tile_map_parallel.vcxproj.filters
tile_map_parallel/src/: CMakeLists.txt  RasterMeta.h  Tile.cpp  Tile.h  TileAccessor.cpp  TileAccessor.h  TileDatasetAccessor.cpp  TileDatasetAccessor.h  TileMapBuilder.cpp  TileMapBuilder.h  TileMapScheduler.cpp  TileMapScheduler.h  TileMemoryAccessor.cpp  TileMemoryAccessor.h  TilePyramidLevel.h  TileResampler.cpp  TileResampler.h  presets.h
